# alucard-moveset

./: .gitignore  Cargo.toml  README.md
romf/axe.motion/: motion_list.yml
romf/coffin.motion/: motion_list.yml
romf/common.param/: fighter_param.prcxml  fighter_param_motion.prcxml
romf/richter.motion/: motion_list.yml  out.yml  swing.prc
romf/richter.param/: expression_vl.prc  vl.prcxml
romf/stake.motion/: motion_list.yml
romf/ui/message/: msg_menu.xmsbt  msg_name.xmsbt  msg_spirits.xmsbt  msg_tips.xmsbt
romf/ui/param/: ui_layout_db.prcxml
romf/ui/param/database/: ui_chara_db.prcxml  ui_clear_getter_db.prcxml  ui_layout_db.prcxml  ui_spirit_layout_db.prcxml  ui_spirits_battle_db.prcxml  ui_tips_db.prcxml
romf/ui/param/info/: hud_smash_appeal_palutena.prcxml
romf/ui/param/standard/: notes.txt  standard_route_richter.prc  standard_route_richter.prcxml
romf/whip.motion/: motion_list.yml  out.yml
src/: hook.rs  lib.rs  params.rs  update.rs  vars.rs
src/axe/: fly.rs  hop.rs  mod.rs
src/coffin/: entry.rs  finalsmash.rs  mod.rs
src/cross/: fly.rs  mod.rs
src/richter/: backair.rs  dashattack.rs  downair.rs  downsmash.rs  downtilt.rs  finalsmash.rs  forwardair.rs  forwardsmash.rs  forwardtilt.rs  hook.rs  jab.rs  mod.rs  movement.rs  neutralair.rs  neutralspecial.rs  opff.rs  results.rs  sidespecial.rs  sidespecial_grab.rs  status.rs  taunts.rs  throws.rs  upair.rs  upsmash.rs  upspecial.rs  uptilt.rs
src/whip/: backair.rs  downsmash.rs  downtilt.rs  forwardair.rs  jab.rs  mod.rs  trails.rs  upthrow.rs
(+4 files in other folders)
